--- a/javascript/building-blocks/functions/function-scope.html
+++ b/javascript/building-blocks/functions/function-scope.html
@@ -10,12 +10,14 @@
     var x = 1;
 
     function a() {
-      var y = 2;
-    }
+  let y = 2;
+  output(y);
+}
 
-    function b() {
-      var z = 3;
-    }
+function b() {
+  let z = 3;
+  output(z);
+}
 
     function output(value) {
       var para = document.createElement('p');
